# psyops

./: .env  .gitattributes  .gitignore  .gitmodules  .sops.yaml  Dockerfile  bashrc.d.psyops  bashrc.d.volumes  docker-compose.yml  httpd.conf  opt.bin.ppsyops  psyops-setup.sh  psyops.prompt  psyops.py  readme.markdown  run.ps1  wrapdocker.ps1  wrapdocker.py
pipelines/macrofactor/: .dockerignore  .gitignore  Dockerfile  README.md  buildver.py  pyproject.toml  test.txt
pipelines/macrofactor/src/knpl_macrofactor/: __init__.py  cli.py  dataimport.py  db.py  processing.py  version.py
progfigsite/: .gitignore  APKBUILD.template  pyproject.toml  readme.md
progfigsite/groups/: kubernasty.py
progfigsite/progfigsite/: __init__.py  inventory.conf  version.py
progfigsite/progfigsite/autovendor/: __init__.py
progfigsite/progfigsite/builddata/: __init__.py
progfigsite/progfigsite/cli/: progfigsite_buildapk_cmd.py  progfigsite_cmd.py  progfigsite_shim.py
progfigsite/progfigsite/groups/: kubernasty.secrets.json  privnet.py  privnet.secrets.json  privnet.secrets.yml
progfigsite/progfigsite/nodes/: __init__.py  agassiz.py
progfigsite/progfigsite/roles/acmeupdater_base/: __init__.py
progfigsite/progfigsite/roles/acmeupdater_synology/: __init__.py
progfigsite/progfigsite/roles/datadisk_v1/: __init__.py
progfigsite/progfigsite/roles/datadisk_v2/: __init__.py
progfigsite/progfigsite/roles/emailfwd/: __init__.py
progfigsite/progfigsite/roles/homeswarm/: __init__.py  archivebox-docker-run.sh.temple  traefik.yml.temple
progfigsite/progfigsite/roles/onion_admin/: __init__.py
progfigsite/progfigsite/roles/psyopsos_postboot_config/: __init__.py
progfigsite/progfigsite/roles/pullbackup/: __init__.py
progfigsite/progfigsite/roles/pullbackup_email/: __init__.py  mbsyncrc.temple
progfigsite/progfigsite/roles/pullbackup_unifi/: __init__.py
progfigsite/progfigsite/roles/synergycontroller/: __init__.py  synergy.conf
progfigsite/progfigsite/roles/syslog_collector/: __init__.py
progfigsite/progfigsite/sitelib/: __init__.py  siteglobals.py
progfigsite/progfigsite/sitelib/buildsite/: APKBUILD.temple  __init__.py
progfigsite/roles/acmeupdater_base/: __init__.py
progfigsite/roles/acmeupdater_synology/: __init__.py  acmeupdater_synology.sh.temple
progfigsite/roles/homeswarm/: compose.yml.temple
progfigsite/roles/k3s/: __init__.py
progfigsite/roles/synergycontroller/: synergys.openrc.conf.temple
progfiguration_blacksite/: .gitignore  pyproject.toml  readme.md  ruff.toml
progfiguration_blacksite/progfiguration_blacksite/: __init__.py  inventory.conf  inventory.py
progfiguration_blacksite/progfiguration_blacksite/cli/: __init__.py  progfigsite_buildapk_cmd.py  progfigsite_newnode_cmd.py  progfigsite_shim.py  wipedisk_cmd.py
progfiguration_blacksite/progfiguration_blacksite/groups/: privnet.py
progfiguration_blacksite/progfiguration_blacksite/nodes/: agassiz.py  jesseta.py  kenasus.py  newjutland.py  newjutland.secrets.json  psyopsos-test-1.py
progfiguration_blacksite/progfiguration_blacksite/roles/acmeupdater_base/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/acmeupdater_synology/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/capthook/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/emailfwd/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/homeswarm/: __init__.py  archivebox.sonic.cfg.temple
progfiguration_blacksite/progfiguration_blacksite/roles/onion_admin/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/psyopsos_postboot_config/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/pullbackup/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/pullbackup_email/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/pullbackup_unifi/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/synergycontroller/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/roles/syslog_collector/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/sitelib/: __init__.py
progfiguration_blacksite/progfiguration_blacksite/sitelib/buildsite/: APKBUILD.temple
progfiguration_blacksite/src/progfiguration_blacksite/: __init__.py  hardware.md  inventory.conf  inventory.py  version.py
progfiguration_blacksite/src/progfiguration_blacksite/cli/: progfigsite_buildapk_cmd.py  progfigsite_newnode_cmd.py  progfigsite_node_cmd.py  progfigsite_shim.py
progfiguration_blacksite/src/progfiguration_blacksite/groups/: __init__.py  kubernasty.py  kubernasty.secrets.json  privnet.py  seedbox.py  universal.py  universal.secrets.json
progfiguration_blacksite/src/progfiguration_blacksite/nodes/: agassiz.py  dieselgrove.py  jesseta.py  kenasus.py  newjutland.py  psyopsos-test-1.py  qreamsqueen.py  rusthaven.py  tagasaw.py  tagasaw.secrets.json  wirefield.py  zalas.py
progfiguration_blacksite/src/progfiguration_blacksite/roles/: __init__.py
progfiguration_blacksite/src/progfiguration_blacksite/sitelib/: githubrelease.py  networking.py  role_helpers.py  siteglobals.py  tracked_file_changes.py  (+2 more)
psyopsOS/neuralupgrade/: .gitignore  CLAUDE.md  pyproject.toml  readme.md
psyopsOS/neuralupgrade/tests/: __init__.py  test_osupdates.py  test_update_metadata.py
psyopsOS/progfiguration/: .gitignore  APKBUILD.template  progfiguration_build.py  pyproject.toml  readme.md  setup.cfg  setup.py
psyopsOS/progfiguration/docs/: age-scaling.md  design.md  dry.md  remoting.md  roles.md  why.md
psyopsOS/progfiguration/progfiguration/: __init__.py  age.py  cli.py  cmd.py  facts.py  localhost.py  nodes.py  progfigtypes.py  ssh.py  version.py
psyopsOS/progfiguration/tests/: __init__.py  test_cmd.py  test_site.py
psyopsOS/psybuildboot/: pyproject.toml  readme.md
telekinesis/: pyproject.toml  readme.md
telekinesis/src/telekinesis/: __init__.py  alpine_docker_builder.py  aports.py  architectures.py  argparsestr.py  config.py  deaddrop.py  minisign.py  platforms.py  rget.py  tksecrets.py
(+2311 files in other folders)
