[project]
name = "progfiguration_blacksite"
dynamic = ["version"]
description = "PROGramatic conFIGURATION for your infrastructure: The PSYOPS BLACK SITE"
license = { text = "WTFPL" }
readme = "readme.md"
requires-python = ">=3.10"
dependencies = []

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
progfiguration-blacksite = "progfiguration_blacksite.cli.progfigsite_shim:main"
progfiguration-blacksite-buildapk = "progfiguration_blacksite.cli.progfigsite_buildapk_cmd:main"
progfiguration-blacksite-newnode = "progfiguration_blacksite.cli.progfigsite_newnode_cmd:main"

[project.optional-dependencies]
development = [
    # Progfiguration itself
    "progfiguration >= 0.0.2a8",

    # Installed by roles, which then requires them
    # In development we just install them here so that we get nice type hints etc
    "requests",
    "types-requests",

    # Development tools
    "black",
    "build",
    "mypy",

    # Used by the APK build process and/or progfiguration-blacksite-buildapk
    "installer",
    "setuptools",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/mrled/psyops/tree/master/blacksite"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*"]

# [tool.setuptools.exclude-package-data]
# "*" = ["**/*.pyc", "**/*.pyo", "**/__pycache__"]

[tool.setuptools.dynamic]
version = { attr = "progfiguration_blacksite.get_version" }

[tool.black]
line-length = 120
