[project]
name = "telekinesis"
description = "The PSYOPS build and administration tool"
license = { text = "WTFPL" }
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["boto3", "requests"]
version = "0.0.1"

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
tk = "telekinesis.cli.tk:main"

[project.optional-dependencies]
development = [
    # Development tools
    "black",
    "build",
    "cogapp",
    "mypy",

    # Types
    "boto3-stubs",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/mrled/psyops/tree/master/telekinesis"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
