[project]
name = "neuralupgrade"
description = "The psyopsOS upgrade tool"
license = { text = "WTFPL" }
readme = "readme.md"
requires-python = ">=3.10"
version = "1.0.7"
dependencies = ["requests"]

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
neuralupgrade = "neuralupgrade.cmd:main"

[project.optional-dependencies]
development = ["types-requests"]

[project.urls]
Homepage = "https://github.com/mrled/psyops/tree/master/psyopsOS/neuralupgrade"

[tool.black]
line-length = 120
