[metadata]
name = progfiguration

# The build_version.py file is created by the build process (tasks.py)
# It isn't and shouldn't be in git
version = attr: progfiguration.build_version.VERSION

author = Micah R Ledbetter
author_email = me@micahrl.com
description = Programmatically configure psyopsOS nodes
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = "https://github.com/mrled/psyops/tree/master/psyopsOS"

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML
    invoke
    pytz
    requests

[options.package_data]
* =
    inventory.yml
    *

[options.entry_points]
console_scripts =
    psyopsOS-progfiguration = progfiguration.cli:main
