[metadata]
name = progfiguration

version = attr: progfiguration.version.getversion

author = Micah R Ledbetter
author_email = me@micahrl.com
description = Programmatically configure psyopsOS nodes
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = "https://github.com/mrled/psyops/tree/master/psyopsOS"

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML
    pytz
    requests

[options.package_data]
* =
    inventory.yml
    *

[options.entry_points]
console_scripts =
    psyopsOS-progfiguration = progfiguration.cli.progfiguration:main
