[metadata]
name = progfiguration

version = attr: progfiguration.version.getversion

author = Micah R Ledbetter
author_email = me@micahrl.com
description = Programmatically configure psyopsOS nodes
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = "https://github.com/mrled/psyops/tree/master/psyopsOS"

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML
    pytz
    requests

[options.extras_require]
ssh =
    mitogen

[options.package_data]
* =
    inventory.yml
    *

[options.entry_points]
console_scripts =
    # This name is deprecated...
    psyopsOS-progfiguration = progfiguration.cli.progfiguration_cmd:main
    # ... use this one intsead
    progfiguration = progfiguration.cli.progfiguration_cmd:main

    progfiguration-wipedisk = progfiguration.cli.wipedisk_cmd:main
