[project]
name = "psybuildboot"
description = "The PSYOPS boot device build and update tool"
license = { text = "WTFPL" }
readme = "readme.md"
requires-python = ">=3.10"
version = "1.0.0"
dependencies = ["requests"]

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
# This works because we have src/psybuildboot/__main__.py
psybuildboot = "psybuildboot"

[project.optional-dependencies]
development = ["types-requests"]

[project.urls]
Homepage = "https://github.com/mrled/psyops/tree/master/psyopsOS/psybuildboot"

[tool.black]
line-length = 120
